<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAprender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".Aprender">

    <Button
        android:id="@+id/buttonColores"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button"
        android:text="@string/colores"
        app:backgroundTint="@color/active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAnimales"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/round_button"
        android:text="@string/animales"
        app:backgroundTint="@color/gris_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonColores" />

    <Button
        android:id="@+id/buttonTrabajos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/trabajos"
        app:backgroundTint="@color/gris_claro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnimales" />

    <Button
        android:id="@+id/buttonPlantas"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/round_button"
        android:text="@string/plantas"
        app:backgroundTint="@color/gris_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTrabajos" />
</androidx.constraintlayout.widget.ConstraintLayout>